...
                NavigationUtil.popToRootView()
            } label: {
                ZStack(alignment: .center) {
                    RoundedRectangle(cornerRadius: 8)
                        .frame(height: 52, alignment: .center)
                    HStack {
                        Text("Готово")
                            .font(UIFont.sfBodySemibold.asFont)
                    }
                    .foregroundColor(.DS.bgLightPrimary)
                }
            }
            .padding(.horizontal, 20)
...
