...
            }
        }  label: {
            ZStack(alignment: .center) {
                RoundedRectangle(cornerRadius: 8)
                    .frame(width: 52, height: 52)
                HStack {
                    Image(systemName: "arrow.forward")
                        .font(.system(size: 24))
                        .foregroundColor(!disabled ? .DS.bgLightPrimary : .DS.greysGrey3Light)
                }
            }
        }
        .buttonStyle(InExamButtonStyle(isEnabled: !disabled))
...
